--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -2,11 +2,30 @@ app.title=Calories management
 app.home=Home
 app.footer=Project <a href="https://github.com/JavaOPs/topjava" target=_blank>Maven/ Spring/ Security/ JPA(Hibernate)/ Jackson/jQuery</a> application
 app.login=Login as
+
 user.title=Users
 user.name=Name
 user.email=Email
 user.roles=Roles
 user.active=Active
 user.registered=Registered
-meal.title=Meals
+
 common.select=Select
+
+meal.title=Meals
+meal.create=Create meal
+meal.edit=Edit meal
+meal.date=Date
+meal.dateTime=Date/Time
+meal.description=Description
+meal.calories=Calories
+meal.save=Save
+meal.cancel=Cancel
+meal.fromDate=From Date
+meal.toDate=To Date
+meal.fromTime=From time
+meal.toTime=To Time
+meal.filter=Filter
+meal.add=Add Meal
+meal.update=Update
+meal.delete=Delete
