--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
 
         <spring.version>5.0.7.RELEASE</spring.version>
         <spring-data-jpa.version>2.0.8.RELEASE</spring-data-jpa.version>
+        <jackson-json.version>2.9.6</jackson-json.version>
+
         <tomcat.version>9.0.10</tomcat.version>
 
         <!-- Logging -->
@@ -251,6 +253,13 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
+        </dependency>
+
+        <!--JSON-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-json.version}</version>
         </dependency>
 
         <!--Test-->
